--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "astro": "5.13.4",
-    "less": "4.4.1"
+    "less": "4.4.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "packageManager": "pnpm@9.5.0"
 }
