--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "astro": "5.13.4",
+    "jspdf": "^3.0.2",
     "less": "4.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
